# cpm_cmake_sdl2

./: CMakeLists.txt  README.md  debug_run.bat  test.cmake
src/: sdl2_opengl_imgui.c  sdl2_opengl_imgui.cpp  sdl2_renderer_imgui.cpp  sdl2_window.cpp
